--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "parser": "babel-eslint",
     "extends": ["airbnb"],
     "rules": {
+        "default-case": 0,
         "react/jsx-indent": 0,
         "react/jsx-wrap-multilines": false,
         "react/jsx-filename-extension": false,
